--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -135,7 +135,8 @@ body h1 {
   list-style: none;
   background-color: #C4E0E3;
   border-radius: 0.6rem;
-  height: 4rem;
+  min-height: 4rem;
+  max-height:7rem;
   margin: 0 0.8rem 1rem 0.6rem;
   padding: 0 0.3rem;
   font-size: 16px;
